// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkPanel should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 2,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 2,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
    ]
  }
  testID="arbitrary value"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 2,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel should render correctly without padding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 2,
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;
